Closed Bug 299838 Opened 21 years ago Closed 21 years ago

BiDi: Caret disappears outside the end of lines that end with spaces (when such lines are part of an overflowing paragraph)

Categories

(Core :: Layout: Text and Fonts, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.8beta4

People

(Reporter: bugzillamozilla, Assigned: uriber)

References

Details

Attachments

(1 file)

To reproduce: 1. Open https://bugzilla.mozilla.org/attachment.cgi?id=134102&action=view 2. Put the caret anywhere on the first line (RTL textarea). 2. Press End or press the LeftArrow repeatedly until the caret is at the end of the line. Actual Result: The caret disappears. Expected result: The caret should be displayed at the end of the first line. See screenshot of IE6 handling the same situation: http://oren.gomen.org/mozilla/textareas6IE6.png Tested with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050705 Firefox/1.0+ First reported in Bug 207186, comment #16 Prog.
Attached patch patchSplinter Review
Handle the RTL case similarly to the way the LTR case is handled. This should have been included in the fix for bug 19265.
Attachment #188448 - Flags: superreview?(roc)
Attachment #188448 - Flags: review?(smontagu)
Status: NEW → ASSIGNED
Attachment #188448 - Flags: superreview?(roc) → superreview+
*** Bug 89253 has been marked as a duplicate of this bug. ***
This is the same as attachment 41193 [details] [diff] [review] in bug 89253, right? What about the problem mentioned in bug 89253 comment 2? Has that been fixed by something else in the meanwhile?
(In reply to comment #3) Yes - it is the same. I didn't realize that patch existed. I have never seen the problem mentioned in bug 89253 comment 2 - with or without the patch. So I guess it was fixed a while ago.
Attachment #188448 - Flags: review?(smontagu) → review+
Attachment #188448 - Flags: approval1.8b4?
Attachment #188448 - Flags: approval1.8b4? → approval1.8b4+
Simon, Mano - can one of you please check in the patch for me? Thanks.
Thanks Uri! Checking in nsTextFrame.cpp; /cvsroot/mozilla/layout/generic/nsTextFrame.cpp,v <-- nsTextFrame.cpp new revision: 1.513; previous revision: 1.512 done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.8beta4
Status: RESOLVED → VERIFIED
Component: Layout: BiDi Hebrew & Arabic → Layout: Text
QA Contact: zach → layout.fonts-and-text
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: