Bug 299838 - BiDi: Caret disappears outside the end of lines that end with spaces. patch from Uri Bernstein <uriber@gmail.com>, r=smontagu, sr=roc, a=bsmedberg.